--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "nodemon server/server.js",
-    "postinstall": "bash ./post_install.sh"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
