Updated package.json for bower components on heroku

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Stay informed, see how your elected officials are using thier post",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "start": "nodemon server/server.js",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
