--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bower": "^1.7.2",
     "express": "^4.13.3",
     "express-partials": "^0.3.0",
+    "passport" : "~0.1.17",         
+    "passport-local" : "~0.1.6",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
