--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
+    "bower": "^1.7.2",
     "express": "^4.13.3",
     "express-partials": "^0.3.0",
     "grunt": "^0.4.5",
