Added user register,login and signout in the client. Closed #36 #37.

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
     "Materialize": "materialize#~0.97.5",
-    "angular-resource": "~1.4.8"
+    "angular-resource": "~1.4.8",
+    "jquery": "~2.2.0"
   }
 }
