--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "grunt-shell": "^1.1.2",
     "http": "0.0.0",
     "kerberos": "0.0.17",
-    "mongoose": "^4.3.4",
+    "mongoose": "3.8",
     "morgan": "^1.6.1"
   }
 }
