--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-ui-router": "~0.2.15",
     "Materialize": "materialize#~0.97.5",
     "angular-resource": "~1.4.8",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "angular-materialize": "~0.1.2"
   }
 }
