--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.14.2",
     "bower": "^1.7.2",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "express-partials": "^0.3.0",
     "express-session": "^1.12.1",
@@ -40,6 +41,6 @@
     "morgan": "^1.6.1",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "cookie-parser": "^1.4.0"
+    "scraperjs": "^1.2.0"
   }
 }
